<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_welcome_scene"
    tools:context=".view.WelcomeActivity">

    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_sampah_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="start"
        android:text="@string/txt_welcome"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/descMenu1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu1" />

    <TextView
        android:id="@+id/descMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/desc_menu1"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu1"
        app:layout_constraintStart_toStartOf="@+id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu1" />

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_logo_menu2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="start"
        android:text="@string/titleMenu2"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu2" />

    <TextView
        android:id="@+id/descMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/desc_menu2"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
        app:layout_constraintStart_toStartOf="@+id/titleMenu2"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu2" />

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_logo_menu2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="start"
        android:text="@string/titlemenu3"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu3" />

    <TextView
        android:id="@+id/descMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/desc_menu3"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu3"
        app:layout_constraintStart_toStartOf="@+id/titleMenu3"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu3" />




    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green" />

    <ImageButton
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter"
        android:padding="8dp"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSkip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/skip"
        android:fontFamily="@font/inter"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/md_theme_onSurface"
        android:layout_marginTop="16dp"
        android:padding="6dp" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>